--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,24 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="400dp"
-    android:layout_height="250dp"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:background="@color/grey_200">
 
     <com.google.android.material.chip.ChipGroup
         android:id="@+id/ChipGroup"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginLeft="10dp">
+        android:layout_width="0dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="15dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <com.google.android.material.chip.Chip
             android:id="@+id/Scan"
             android:layout_width="85dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginLeft="10dp"
             android:text="Scan"
             android:textColor="@android:color/white"
-            app:chipBackgroundColor="#3F51B5"
+            app:chipBackgroundColor="#2196F3"
             app:chipIcon="@drawable/ic_center_focus_weak_chip" />
 
         <com.google.android.material.chip.Chip
@@ -27,7 +33,7 @@
             android:layout_height="wrap_content"
             android:text="Top Up"
             android:textColor="#EAE4E4"
-            app:chipBackgroundColor="#3F51B5"
+            app:chipBackgroundColor="#2196F3"
             app:chipIcon="@drawable/ic_add_circle_outline_chip" />
 
         <com.google.android.material.chip.Chip
@@ -36,7 +42,7 @@
             android:layout_height="wrap_content"
             android:text="Send"
             android:textColor="#EDE9E9"
-            app:chipBackgroundColor="#3F51B5"
+            app:chipBackgroundColor="#2196F3"
             app:chipIcon="@drawable/ic_open_in_new_chip" />
 
         <com.google.android.material.chip.Chip
@@ -45,42 +51,264 @@
             android:layout_height="wrap_content"
             android:text="Request"
             android:textColor="#FDFAFA"
-            app:chipBackgroundColor="#3F51B5"
+            app:chipBackgroundColor="#2196F3"
             app:chipIcon="@drawable/ic_open_in_new_rotated_chip" />
 
-        <LinearLayout
-            android:layout_width="380dp"
-            android:layout_height="210dp"
-            android:orientation="horizontal">
-
-            <androidx.cardview.widget.CardView
-                android:id="@+id/Pulsa_Data"
-                android:layout_width="355dp"
-                android:layout_height="160dp"
-                android:layout_marginStart="10dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="25dp"
-                android:layout_marginEnd="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginBottom="25dp">
-
-                <TextView
-                    android:id="@+id/cardTextView"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:padding="16dp"
-                    android:text="Pulsa Data"
-                    android:textSize="14sp"
-                    android:layout_gravity="start|center_vertical"/>
-
-
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                </androidx.constraintlayout.widget.ConstraintLayout>
-            </androidx.cardview.widget.CardView>
-        </LinearLayout>
-
     </com.google.android.material.chip.ChipGroup>
-</ScrollView>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/Pulsa_Data"
+        android:layout_width="359dp"
+        android:layout_height="200dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="-400dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginRight="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/ChipGroup"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.51">
+
+
+
+        <TextView
+            android:id="@+id/pulsaData"
+            android:layout_width="348dp"
+            android:layout_height="wrap_content"
+            android:drawableStart="@drawable/ic_phone_android"
+            android:drawableLeft="@drawable/ic_phone_android"
+            android:drawablePadding="5dp"
+            android:padding="16dp"
+            android:text="@string/pulsa_amp_data"
+            android:textSize="16sp" />
+
+
+        <TextView
+            android:id="@+id/bonusPulsa"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="45sp"
+            android:layout_marginLeft="45sp"
+            android:layout_marginTop="35sp"
+            android:text="Bonus pulsa 50%"
+            android:textColor="#F44336"
+            android:textSize="12sp" />
+
+        <Button
+            android:id="@+id/buyNowBtn"
+            android:layout_width="85dp"
+            android:layout_height="50sp"
+            android:layout_gravity="end"
+            android:layout_marginTop="12dp"
+            android:layout_marginEnd="15dp"
+            android:layout_marginRight="15dp"
+            android:padding="10dp"
+            android:paddingLeft="10dp"
+            android:paddingTop="10dp"
+            android:paddingRight="20dp"
+            android:text="Buy now"
+            android:textSize="10sp"
+            app:backgroundTint="#2196F3" />
+
+        <TextView
+            android:id="@+id/lightBulbImg"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="80dp"
+            android:drawableStart="@drawable/ic_lightbulb"
+            android:drawableLeft="@drawable/ic_lightbulb"
+            android:gravity="bottom|start|left"
+            android:padding="16dp" />
+
+        <TextView
+            android:id="@+id/electricText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="15dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="125dp"
+            android:text="Electric.." />
+
+        <TextView
+            android:id="@+id/moneyImg"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="100dp"
+            android:layout_marginLeft="100dp"
+            android:layout_marginTop="80dp"
+            android:drawableStart="@drawable/ic_monetization_on"
+            android:drawableLeft="@drawable/ic_monetization_on"
+            android:padding="16dp" />
+
+        <TextView
+            android:id="@+id/cashOutText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="100dp"
+            android:layout_marginLeft="100dp"
+            android:layout_marginTop="125dp"
+            android:text="Cashout" />
+
+        <TextView
+            android:id="@+id/gamesImg"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="195dp"
+            android:layout_marginLeft="195dp"
+            android:layout_marginTop="80dp"
+            android:drawableStart="@drawable/ic_games"
+            android:drawableLeft="@drawable/ic_games"
+            android:padding="16dp"/>
+
+        <TextView
+            android:id="@+id/gamesText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="200dp"
+            android:layout_marginLeft="200dp"
+            android:layout_marginTop="125dp"
+            android:text="Games" />
+
+        <TextView
+            android:id="@+id/moreImg"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="290dp"
+            android:layout_marginLeft="290dp"
+            android:layout_marginTop="80dp"
+            android:drawableStart="@drawable/ic_more_horiz"
+            android:drawableLeft="@drawable/ic_more_horiz"
+            android:padding="16dp" />
+
+        <TextView
+            android:id="@+id/seeAllText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="300dp"
+            android:layout_marginLeft="300dp"
+            android:layout_marginTop="125dp"
+            android:text="See All" />
+
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/Invoice"
+        android:layout_width="359dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginRight="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/ChipGroup"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.51">
+
+
+        <TextView
+            android:id="@+id/invoiceText"
+            android:layout_width="325dp"
+            android:layout_height="35dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            android:drawableRight="@drawable/ic_swap_vert"
+            android:text="@string/invoice" />
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/Product"
+        android:layout_width="359dp"
+        android:layout_height="200dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="260dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginRight="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/ChipGroup"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.51">
+
+
+        <CheckBox
+            android:id="@+id/checkBox1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Product 01"
+            android:layout_marginTop="0dp"
+            android:layout_marginLeft="10dp"/>
+        <CheckBox
+            android:id="@+id/checkBox2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Product 02"
+            android:layout_marginTop="50dp"
+            android:layout_marginLeft="10dp" />
+        <CheckBox
+            android:id="@+id/checkBox3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Product 03"
+            android:layout_marginTop="100dp"
+            android:layout_marginLeft="10dp" />
+        <CheckBox
+            android:id="@+id/checkBox4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Product 04"
+            android:layout_marginTop="150dp"
+            android:layout_marginLeft="10dp" />
+    </androidx.cardview.widget.CardView>
+
+    <com.google.android.material.button.MaterialButtonToggleGroup
+        android:id="@+id/materialButtonToggleGroup"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="40dp"
+        android:layout_marginLeft="40dp"
+        android:layout_marginTop="20dp"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/Pulsa_Data">
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/toggleButtonNoDiscount"
+            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+            android:layout_width="140dp"
+            android:layout_height="40dp"
+            android:layout_margin="5dp"
+            android:text="NO DISCOUNT"
+            android:textColor="#FFFFFF"
+            android:textSize="12sp"
+            app:backgroundTint="#2196F3"
+            tools:ignore="TouchTargetSizeCheck" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/toggleButtonDiscount"
+            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+            android:layout_width="150dp"
+            android:layout_height="40dp"
+            android:layout_margin="5dp"
+            android:text="DISCOUNT"
+            android:textColor="#1976D2"
+            android:textColorHint="#2196F3"
+            app:backgroundTint="#FFFFFF"
+            tools:ignore="TouchTargetSizeCheck" />
+
+    </com.google.android.material.button.MaterialButtonToggleGroup>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
