--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -200,7 +200,7 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/Invoice"
         android:layout_width="359dp"
-        android:layout_height="40dp"
+        android:layout_height="50dp"
         android:layout_marginStart="10dp"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
@@ -228,7 +228,7 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/Product"
         android:layout_width="359dp"
-        android:layout_height="200dp"
+        android:layout_height="220dp"
         android:layout_marginStart="10dp"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="260dp"
@@ -243,34 +243,190 @@
         app:layout_constraintVertical_bias="0.51">
 
 
+
+
         <CheckBox
             android:id="@+id/checkBox1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Product 01"
-            android:layout_marginTop="0dp"
+            android:layout_marginTop="5dp"
             android:layout_marginLeft="10dp"/>
         <CheckBox
             android:id="@+id/checkBox2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Product 02"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="55dp"
             android:layout_marginLeft="10dp" />
         <CheckBox
             android:id="@+id/checkBox3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Product 03"
-            android:layout_marginTop="100dp"
+            android:layout_marginTop="105dp"
             android:layout_marginLeft="10dp" />
         <CheckBox
             android:id="@+id/checkBox4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Product 04"
-            android:layout_marginTop="150dp"
+            android:layout_marginTop="155dp"
             android:layout_marginLeft="10dp" />
+
+        <TextView
+            android:id="@+id/dollarText1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top"
+            android:layout_marginTop="22dp"
+            android:layout_marginLeft="248dp"
+            android:text="$" />
+
+
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/productAmts1"
+            android:layout_width="85dp"
+            android:layout_height="40sp"
+            android:layout_gravity="end"
+            android:layout_marginTop="12dp"
+            android:layout_marginEnd="15dp"
+            android:layout_marginRight="15dp"
+            android:padding="10dp"
+            android:paddingLeft="10dp"
+            android:paddingTop="10dp"
+            android:paddingRight="20dp">
+
+
+            <EditText
+                android:id="@+id/editTextNumberDecimal1"
+                android:layout_width="325dp"
+                android:layout_height="40dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="6dp"
+                android:ems="10"
+                android:hint="00.00"
+                android:inputType="numberDecimal"
+                tools:ignore="TouchTargetSizeCheck" />
+
+
+        </androidx.cardview.widget.CardView>
+
+
+
+        <TextView
+            android:id="@+id/dollarText2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top"
+            android:layout_marginTop="72dp"
+            android:layout_marginLeft="248dp"
+            android:text="$" />
+
+
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/productAmts2"
+            android:layout_width="85dp"
+            android:layout_height="40sp"
+            android:layout_gravity="end"
+            android:layout_marginTop="62dp"
+            android:layout_marginEnd="15dp"
+            android:layout_marginRight="15dp"
+            android:padding="10dp"
+            android:paddingLeft="10dp"
+            android:paddingTop="10dp"
+            android:paddingRight="20dp">
+
+
+            <EditText
+                android:id="@+id/editTextNumberDecimal2"
+                android:layout_width="325dp"
+                android:layout_height="40dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="6dp"
+                android:ems="10"
+                android:hint="00.00"
+                android:inputType="numberDecimal"
+                tools:ignore="TouchTargetSizeCheck" />
+        </androidx.cardview.widget.CardView>
+
+        <TextView
+            android:id="@+id/dollarText3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top"
+            android:layout_marginTop="122dp"
+            android:layout_marginLeft="248dp"
+            android:text="$" />
+
+
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/productAmts3"
+            android:layout_width="85dp"
+            android:layout_height="40sp"
+            android:layout_gravity="end"
+            android:layout_marginTop="112dp"
+            android:layout_marginEnd="15dp"
+            android:layout_marginRight="15dp"
+            android:padding="10dp"
+            android:paddingLeft="10dp"
+            android:paddingTop="10dp"
+            android:paddingRight="20dp">
+
+
+            <EditText
+                android:id="@+id/editTextNumberDecimal3"
+                android:layout_width="325dp"
+                android:layout_height="40dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="6dp"
+                android:ems="10"
+                android:hint="00.00"
+                android:inputType="numberDecimal"
+                tools:ignore="TouchTargetSizeCheck" />
+        </androidx.cardview.widget.CardView>
+
+        <TextView
+            android:id="@+id/dollarText4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top"
+            android:layout_marginTop="172dp"
+            android:layout_marginLeft="248dp"
+            android:text="$" />
+
+
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/productAmts4"
+            android:layout_width="85dp"
+            android:layout_height="40sp"
+            android:layout_gravity="end"
+            android:layout_marginTop="162dp"
+            android:layout_marginEnd="15dp"
+            android:layout_marginRight="15dp"
+            android:padding="10dp"
+            android:paddingLeft="10dp"
+            android:paddingTop="10dp"
+            android:paddingRight="20dp">
+
+
+            <EditText
+                android:id="@+id/editTextNumberDecimal4"
+                android:layout_width="325dp"
+                android:layout_height="40dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="6dp"
+                android:ems="10"
+                android:hint="00.00"
+                android:inputType="numberDecimal"
+                tools:ignore="TouchTargetSizeCheck" />
+        </androidx.cardview.widget.CardView>
+
+
     </androidx.cardview.widget.CardView>
 
     <com.google.android.material.button.MaterialButtonToggleGroup
@@ -310,5 +466,64 @@
             tools:ignore="TouchTargetSizeCheck" />
 
     </com.google.android.material.button.MaterialButtonToggleGroup>
+
+
+    <com.google.android.material.button.MaterialButtonToggleGroup
+        android:id="@+id/materialButtonToggleGroup2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="-181dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginTop="20dp"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/Product">
+
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/toggleButtonCalculate"
+        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+        android:layout_width="180dp"
+        android:layout_height="40dp"
+        android:layout_margin="5dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginLeft="40dp"
+        android:layout_marginTop="20dp"
+        android:orientation="horizontal"
+        android:text="CALCULATE TOTAL"
+        android:textColor="#1976D2"
+        android:textColorHint="#2196F3"
+        app:backgroundTint="#FFFFFF"
+        tools:ignore="TouchTargetSizeCheck" />
+
+    </com.google.android.material.button.MaterialButtonToggleGroup>
+
+    <TextView
+        android:id="@+id/TotalText"
+        android:layout_width="44dp"
+        android:layout_height="27dp"
+        android:layout_marginLeft="90dp"
+        android:layout_marginTop="35dp"
+        android:text="Total:"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/Product" />
+
+    <EditText
+        android:id="@+id/editTextNumberDecimalTotal"
+        android:layout_width="80dp"
+        android:layout_height="40dp"
+        android:layout_marginLeft="200dp"
+        android:layout_marginTop="28dp"
+        android:ems="10"
+        android:hint="$ 00.00"
+        android:inputType="numberDecimal"
+        tools:ignore="TouchTargetSizeCheck"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/Product"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
